Proofreading some POD

--- a/Language/faq.pod
+++ b/Language/faq.pod
@@ -541,13 +541,13 @@ them offer all.
 
 =item react / whenever / supply keywords allows easy construction of interactive, event driven applications.
 
-=item Lazy evaluation when possible, eager evaluation when wanted or necessary.   This means, for example, lazy lists, and even infinite lazy lists, like the Fibonacci sequence, or all prime numbers.
+=item Lazy evaluation when possible, eager evaluation when wanted or necessary.  This means, for example, lazy lists, and even infinite lazy lists, like the Fibonacci sequence, or all prime numbers.
 
 =item Native data types for faster, closer to the metal, processing.
 
 =item Interfacing to external libraries in C / C++ are trivially simple with NativeCall.
 
-=item Interfacing with Perl 5 (CPAN) / Python modules trivially simple with Inline::Perl5 resp. Inline::Python.
+=item Interfacing with Perl 5 (CPAN) / Python modules trivially simple with Inline::Perl5 and Inline::Python.
 
 =item Can have multiple versions of a module installed and loaded simultaneously.
 
@@ -575,7 +575,7 @@ them offer all.
 
 =item Runs on small (e.g. Raspberry Pi) and large multi-processor hardware.
 
-=item Garbage collect based: no timely destruction, so no ref-counting necessary.  Use phasers for timely actions.
+=item Garbage collection based: no timely destruction, so no ref-counting necessary.  Use phasers for timely actions.
 
 =item Methods can be mixed into any instantiated object at runtime, e.g. to allow adding out-of-band data.
 
@@ -595,8 +595,8 @@ features.
 
 That depends on what you are doing. Rakudo has been developed with the
 philosophy of "make it work right then make it work fast". It's fast for some
-things already but needs work on others.  After the Christmas 2015 release stabilizes
-the definition of the language, we'll be spending much of our effort on optimizing in 2016.
+things already but needs work on others.  Since the Christmas 2015 release stabilized
+the definition of the language, we're spending much of our effort on optimizing in 2016.
 Since Perl 6 provides lots of clues to the JIT that other dynamic languages don't, we think
 we'll have a lot of headroom for performance improvements.  Some things already
 run faster than Perl 5.
@@ -617,7 +617,7 @@ Examples:
     # Perl 6 version
     use v6;
 
-    class Foo { has $.i is rw};
+    class Foo { has $.i is rw };
 
     for (1..1_000_000) -> $i {
         my $obj = Foo.new;
@@ -628,7 +628,7 @@ Examples:
     package Foo;
     use Moose;
 
-    has i => ( is=> 'rw');
+    has i => (is => 'rw');
 
     __PACKAGE__->meta->make_immutable;
 
@@ -659,7 +659,7 @@ Examples:
 
     my ($prev, $current) = (1,0);
 
-    for ( 0..100_000) {
+    for (0..100_000) {
         ($prev, $current) = ($current, $prev + $current);
     }
     print $current;
