--- a/Language/modules-extra.pod
+++ b/Language/modules-extra.pod
@@ -5,23 +5,24 @@
 =SUBTITLE What can help you write/test/improve your module(s)
 
 Here is a list of modules that you can find in the Perl 6 ecosystem
-which aims to make the experiences of developing Perl 6 modules
+which aim to make the experience of developing Perl 6 modules
 more fun.
 
-=head1 Modules builder and Authoring tools
 
-Here some modules/tools that can help you with generating files that are part
-of a module.
+=head1 Module builder and Authoring tools
+
+Some modules and tools to help you with generating files that are part
+of a module distribution.
 
 =item L<App::Mi6|http://modules.perl6.org/dist/App::Mi6>     Minimal authoring tool for Perl6
 =item L<META6|http://modules.perl6.org/dist/META6>        Do things with Perl 6 META files
 =item L<Module::Skeleton|https://bitbucket.org/rightfold/module-skeleton>        Generate a skeleton module
 =item L<p6doc|http://modules.perl6.org/dist/p6doc>        Generate documentation end-products
 
+
 =head1 Tests
 
-Some tests related modules
-
+Some tests of module quality.
 
 =item L<Test::META|http://modules.perl6.org/dist/Test::META>      Test your META6.json file
 =item L<Test::Output|http://modules.perl6.org/dist/Test::Output>  Test the output to STDOUT and STDERR your program generates
@@ -31,7 +32,6 @@ Some tests related modules
 =head1 NativeCall
 
 Here some modules to help you work with NativeCall.
-
 
 =item L<NativeHelpers::Array|http://modules.perl6.org/dist/NativeHelpers::Array>  Provides routines to deal with CArray
 =item L<App::GPTrixie|http://modules.perl6.org/dist/App::GPTrixie>                Generate NativeCall code from C headers file
