--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -136,7 +136,7 @@ any argument list.
     =end code
 
 You can pass named parameters to C<is export> to group symbols for exporting
-then the importer can pick and choose. There are three predefined
+so that the importer can pick and choose. There are three predefined
 tags: C<ALL>, C<DEFAULT> and C<MANDATORY>.
 
     =begin code
@@ -161,7 +161,7 @@ tags: C<ALL>, C<DEFAULT> and C<MANDATORY>.
 
 =head3 UNIT::EXPORT::*
 
-Beneath the surface C<is export> is adding the symbols to a C<UNIT>
+Beneath the surface, C<is export> is adding the symbols to a C<UNIT>
 scoped package in the C<EXPORT> namespace. For example, C<is
 export(:FOO)> will add the target to the C<UNIT::EXPORT::FOO>
 package. This is what Perl 6 is really using to decide what to import.
@@ -247,7 +247,7 @@ the values are the desired values. The names should include the sigil
     =end code
 
 Note, C<EXPORT> can't be declared inside a package because
-presently rakudo (2015.09) seems to treat C<EXPORT> as part of the
+presently Rakudo (2015.09) seems to treat C<EXPORT> as part of the
 compunit rather than the package.
 
 Whereas C<UNIT::EXPORT> packages deal with the named parameters passed
@@ -299,7 +299,7 @@ L<Cool>s.
 
     =begin code
     use MakeQuestionable Cool;
-    say 0?,1?,{}?,{ a => "b"}?; # False True False True
+    say 0?, 1?, {}?, { a => "b" }?; # False True False True
     =end code
 
 =head2 Finding Modules
@@ -363,10 +363,12 @@ To share your module, do the following:
                 `-- Gargravarr.pm
     =end item
 
-    =item If you have any additional files (such as templates or a dynamic library ) that you wish to have installed so you can access them at runtime they should be placed in a C<resources> sub-directory of your project.
+    =item If you have any additional files (such as templates or a dynamic 
+    library) that you wish to have installed so you can access them at 
+    runtime, they should be placed in a C<resources> sub-directory of your project.
 
-    =item The C<README.md> file is a L<markdown-formatted|https://help.github.com/articles/markdown-basics/> text file, which
-    will later be automatically rendered as HTML by GitHub.
+    =item The C<README.md> file is a L<markdown-formatted|https://help.github.com/articles/markdown-basics/>
+    text file, which will later be automatically rendered as HTML by GitHub.
 
     =item Regarding the C<LICENSE> file, if you have no other preference,
     you might just use the same one that Rakudo Perl 6 uses. Just
@@ -418,14 +420,14 @@ To share your module, do the following:
     details). If the version number doesn't matter to you or your users
     right now, you can just put in an asterisk (*) for the version.
 
-	The C<authors> section includes a list of all the module authors. In
-	the case there is only one author, a single element list must be
-	supplied.
+    The C<authors> section includes a list of all the module authors. In
+    the case there is only one author, a single element list must be
+    supplied.
 
     In the C<provides> section, include all the namespaces provided by
     your distribution and that you wish to be installed, only module
     files that are explicitly included here will be installed and
-    available with C<use> or C<require> in other programs
+    available with C<use> or C<require> in other programs.
     
     Set C<perl> version to the minimum perl version your module works with.
 
@@ -435,8 +437,8 @@ To share your module, do the following:
     library files and their installed location can be determined through the
     C<%?RESOURCES> Hash indexed on the name provided.
 
-	The L<Test::META module | https://github.com/jonathanstowe/Test-META/>
-	can help you check the correctness of the META6.json file.
+    The L<Test::META module | https://github.com/jonathanstowe/Test-META/>
+    can help you check the correctness of the META6.json file.
 
     =end item
 
@@ -451,10 +453,10 @@ To share your module, do the following:
 
     =item Push your project to GitHub.
     
-    =item Consider to setup automated testing (see L<https://docs.travis-ci.com/user/languages/perl6>).
+    =item Consider setting up automated testing (see L<https://docs.travis-ci.com/user/languages/perl6>).
 
     =item Create a PR on L<ecosystem|https://github.com/perl6/ecosystem> adding
-    your module to META.list, or Ping someone on IRC (#perl6 at freenode) to
+    your module to META.list, or ping someone on IRC (#perl6 at freenode) to
     get help having it added.
 
     =item After the pull request has been accepted, wait for an hour. If
@@ -489,10 +491,10 @@ infrastructure. B<Volunteers needed!>
 
 The rough plan is:
 
-	    1. fix EVAL precomp bug (nine)
-	    2. get Repository API straight
-	    3. get zef up to speed
-	    4. continue with the metacpan fork for perl6 (jdv79)
+        1. fix EVAL precomp bug (nine)
+        2. get Repository API straight
+        3. get zef up to speed
+        4. continue with the metacpan fork for perl6 (jdv79)
 
 The repository with jdv's fork can be found at L<https://github.com/jdv/metacpan-web>
 
