--- a/Language/mop.pod
+++ b/Language/mop.pod
@@ -47,7 +47,7 @@ uses such calls to meta objects.
 These are introspective macros that resemble method calls.
 
 Metamethods are generally named with ALLCAPS, and it is considered good
-style to avoid using your own methods with ALLCAPS names.  This will avoid
+style to avoid creating your own methods with ALLCAPS names.  This will avoid
 conflicts with any metamethods that may appear in future versions of the
 language.  Note that if you really must use a method which has an ALLCAPS
 name, use quotes around the method name to safely call it indirectly:
@@ -146,7 +146,7 @@ primitives that the virtual machine under NQP provides.
 
 Since the object model is bootstrapped in terms of lower-level types,
 introspection can sometimes return low-level types instead of the ones you
-expect, like a NQP-level routine instead of normal L<Routine|/type/Routine>
+expect, like an NQP-level routine instead of a normal L<Routine|/type/Routine>
 object, or a bootstrap-attribute instead of L<Attribute|/type/Attribute>.
 
 =head2 Composition time and static reasoning
