--- a/Language/objects.pod
+++ b/Language/objects.pod
@@ -572,7 +572,7 @@ providing a method of the same name in the class.
 
 This is much safer than multiple inheritance, where conflicts are never
 detected by the compiler, but are instead simply resolved to the superclass
-that appears earlier in the method resolution order, which might or might not be what the
+that appears earlier in the method resolution order, which might not be what the
 programmer wanted.
 
 For example, if you've discovered an efficient method to ride cows, and are
@@ -791,51 +791,51 @@ the normal rules of multi dispatch apply for choosing multi candidates.
 
 =head2 Mixins of Roles
 
-Roles can be mixed into objects. A roles given attributes and methods will be
-added to the methods and attributes the object already got. Multiple mixins and
+Roles can be mixed into objects. A role's given attributes and methods will be
+added to the methods and attributes the object already has. Multiple mixins and
 anonymous roles are supported.
 
-	role R { method Str() {'hidden!'} };
-	my $i = 2 but R; 
-	sub f(\bound){ put bound };
+    role R { method Str() {'hidden!'} };
+    my $i = 2 but R; 
+    sub f(\bound){ put bound };
     f($i); # hidden!
 
-Note that the object got the role mixed in, not the objects class or the 
+Note that the object got the role mixed in, not the object's class or the 
 container. Thus @-sigiled containers will require binding to make the role
-stick. Some operators will return a new value, resulting in the mixin to be 
-stripped as well.
+stick. Some operators will return a new value, which effectively strips
+the mixin from the result.
 
-Mixins can happen at any time of your objects life.
+Mixins can happen at any time of your object's life.
 
-	# A counter for Table of Contents
-	role TOC-Counter {
-	    has Int @!counters is default(0);
-	    method Str () { @!counters.join: '.' }
-	    method inc ($level) {
-	        @!counters[$level - 1]++;
-	        @!counters.splice($level);
-	        self
-	    }
-	}
-	
-	my Num $toc-counter = NaN;     # don't do maths with Not A Number
-	say $toc-counter; # NaN
-	$toc-counter does TOC-Counter; # now we mix the role in
-	$toc-counter.inc(1).inc(2).inc(2).inc(1).inc(2).inc(2).inc(3).inc(3);
-	put $toc-counter / 1;          # NaN (because that's numerical context)
-	put $toc-counter;              # 2.2.2 (put will call TOC-Counter::Str)
+    # A counter for Table of Contents
+    role TOC-Counter {
+        has Int @!counters is default(0);
+        method Str () { @!counters.join: '.' }
+        method inc ($level) {
+            @!counters[$level - 1]++;
+            @!counters.splice($level);
+            self
+        }
+    }
+    
+    my Num $toc-counter = NaN;     # don't do maths with Not A Number
+    say $toc-counter; # NaN
+    $toc-counter does TOC-Counter; # now we mix the role in
+    $toc-counter.inc(1).inc(2).inc(2).inc(1).inc(2).inc(2).inc(3).inc(3);
+    put $toc-counter / 1;          # NaN (because that's numerical context)
+    put $toc-counter;              # 2.2.2 (put will call TOC-Counter::Str)
 
 Roles can by anonymous.
 
-	my %seen of Int is default(0 but role :: { method Str() {'NULL'} });
-	say %seen<not-there>;		   # NULL
-	say %seen<not-there>.defined;  # True (0 may be False but is well defined)
-	say Int.new(%seen<not-there>); # 0
+    my %seen of Int is default(0 but role :: { method Str() {'NULL'} });
+    say %seen<not-there>;          # NULL
+    say %seen<not-there>.defined;  # True (0 may be False but is well defined)
+    say Int.new(%seen<not-there>); # 0
 
 =head1 Meta-Object Programming and Introspection
 
 Perl 6 has a meta object system, which means that the behavior of objects,
-classes, roles, grammars, enums etc. are themselves controlled by other
+classes, roles, grammars, enums, etc. are themselves controlled by other
 objects; those objects are called I<meta objects>. Meta objects are, like
 ordinary objects, instances of classes, in this case we call them I<meta
 classes>.
