--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -36,7 +36,7 @@ Returns L<Bool::True> if the read operations have exhausted the content of the f
     method lines($limit = Inf)
 
 Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lines.
-The new line separator (e.g. $*IN.nl-in) will be excluded.
+The new line separator (i.e., C<$*IN.nl-in>) will be excluded.
 
     =for code :allow<B>
     my @data;
@@ -106,7 +106,7 @@ characters.
 
      method seek(IO::Handle:D: Int:D $offset, SeekType:D $whence --> True)
 
-Move the file pointer (that is the position at which any subsequent read
+Move the file pointer (that is, the position at which any subsequent read
 or write operations will begin,) to the byte position specified by
 C<$offset> relative to the location specified by C<$whence> which may be
 one of:
