doc subscripts with multiple dimensions

--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -304,9 +304,22 @@ entire arrays / hashes into strings:
 
 =head1 Multiple dimensions
 
-...
-=comment TODO: Explain multi-dim subscripts. It's probably best to wait for
-               jnthn's ongoing refactor to finish before writing this section.
+Dimensions in subscripts are separated by a semiconon, allowing to mix lists of
+elements and dimensions.
+
+    my @twodim = (<a b c>, (1,2,3));
+	dd @twodim;
+    # OUTPUT«Array @twodim = [("a", "b", "c"), (1, 2, 3)]␤»
+    dd @twodim[0,1;1]; # 2nd element of both lists
+    # OUTPUT«("b", 2)␤»
+
+Multidimensional subscripts can be used to flatten nested lists.
+
+    my @toomany = [[<a b>], [1,2]];
+    dd @toomany;
+    # OUTPUT«Array @toomany = [["a", "b"], [1, 2]]␤»
+    dd @toomany[*;*];
+    # OUTPUT«("a", "b", 1, 2)␤»
 
 =head1 Modifying elements
 
