--- a/Language/containers.pod
+++ b/Language/containers.pod
@@ -28,8 +28,8 @@ container>.
 
 =head1 Scalar containers
 
-Although objects of type C<Scalar> are everywhere in Perl 6, you usually
-never see them directly as objects, because most operations
+Although objects of type C<Scalar> are everywhere in Perl 6, you rarely
+see them directly as objects, because most operations
 I<decontainerize>, which means they act on the C<Scalar> container's
 contents instead of the container itself.
 
@@ -274,19 +274,19 @@ To provide custom containers Perl 6 provides the class C<Proxy>. It takes two
 methods that are called when values are stored or fetched from the container.
 Type checks are not done by the container itself and other restrictions like
 readonlyness can be broken. The returned value must therefore be of the same
-type then the type of the variable it is bound to. We can use type captures to
+type as the type of the variable it is bound to. We can use type captures to
 work with types in Perl 6.
 
     sub lucky(::T $type) {
-            my T $c-value; # closure variable
-            return Proxy.new(
-                    FETCH => method (){ $c-value},
-                    STORE => method (T $new-value){
-                            X::OutOfRange.new(what => 'number', got => '13', range => '-Inf .. 12, 14..Inf').throw
-                                    if $new-value == 13;
-                            $c-value = $new-value;
-                    }
-            );
+        my T $c-value; # closure variable
+        return Proxy.new(
+            FETCH => method () { $c-value },
+            STORE => method (T $new-value) {
+                X::OutOfRange.new(what => 'number', got => '13', range => '-Inf..12, 14..Inf').throw
+                    if $new-value == 13;
+                $c-value = $new-value;
+            }
+        );
     }
     
     my Int $a := lucky(Int);
@@ -295,4 +295,3 @@ work with types in Perl 6.
     say $a = 13; # X::OutOfRange
 
 =end pod
-
