Fixed broken link

--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -147,7 +147,7 @@ sent or broken if there was an error sending.
 
 This is the equivalent of C<write> for UDP sockets that have been created
 with the C<udp> method, it will try send a UDP message comprised of
-the bytes in the L<Blob|/types/Blob>  C<$b> to the specified C<$host>
+the bytes in the L<Blob|/type/Blob>  C<$b> to the specified C<$host>
 and C<$port> returning a L<Promise|/type/Promise> that will be kept
 when the data is successfully sent or broken if it was unable to send
 the data. In order to send to a broadcast address the C<:broadcast>
