Added docs for method 'put' in IO::Socket

--- a/Type/IO/Socket.pod
+++ b/Type/IO/Socket.pod
@@ -47,6 +47,15 @@ connection. The string version is L<#method print>.
 
 Fails if the socket is not connected.
 
+=head2 method put
+
+    method put(IO::Socket:D: Str(Cool) $string)
+
+Writes the supplied string, with a C<\n> appended to it, 
+to the socket, thus sending it to other end of the connection. 
+
+Fails if the socket is not connected.
+
 =head2 method close
 
     method close(IO::Socket:D)
