Fixed another broken link

--- a/Type/Metamodel/Primitives.pod
+++ b/Type/Metamodel/Primitives.pod
@@ -61,7 +61,7 @@ Configures the type checking for C<$type>. C<@cache> is a list of known types
 against which C<$type> checks positively (so in a classical class-based
 system, the type itself and all recursive superclasses). If C<:authoritative>
 is missing or C<True>, this type will fail checks against all types not in
-C<@cache>. If C<:call_accepts> is True, the method L<ACCEPTS> will be called
+C<@cache>. If C<:call_accepts> is True, the method L<ACCEPTS|/routine/ACCEPTS> will be called
 for type checks against this type.
 
 =head2 method configure_destroy
