Two more broken links fixed

--- a/Type/Mu.pod
+++ b/Type/Mu.pod
@@ -84,7 +84,7 @@ C<say $something.gist> generally produce the same output.
     multi method perl()   returns Str
 
 Returns a Perlish representation of the object (i.e., can usually
-be re-evaluated with L<EVAL> to regenerate the object). The exact output of
+be re-evaluated with L<EVAL|/routine/EVAL> to regenerate the object). The exact output of
 C<perl> is implementation specific, since there are generally many ways to
 write a Perl expression that produces a particular value
 
@@ -189,7 +189,7 @@ newline at end. To produce machine readable output use C<.put>.
 
     multi method ACCEPTS(Mu:U: $other)
 
-C<ACCEPTS> is the method that smart matching with the L<infix ~~|routine:~~>
+C<ACCEPTS> is the method that smart matching with the L<infix ~~|/routine/~~>
 operator and given/when invokes on the right-hand side (the matcher).
 
 The C<Mu:U> multi performs a type check. Returns C<True> if C<$other> conforms to the invocant
