Fixed a bunch of broken links

--- a/Type/IO/Handle.pod
+++ b/Type/IO/Handle.pod
@@ -152,9 +152,9 @@ reading.
 
 =head2 method path
 
-For a handle opened on a file this returns the L<IO::Path|/type/IO/Path> that represents
+For a handle opened on a file this returns the L<IO::Path|/type/IO::Path> that represents
 the file. For the standard I/O handles C<$*IN>, C<$*OUT> and C<$*ERR> it returns a
-L<IO::Special|/type/IO/Special> object.
+L<IO::Special|/type/IO::Special> object.
 
     $fh.path;
 
