--- a/Type/IO/Special.pod
+++ b/Type/IO/Special.pod
@@ -5,8 +5,8 @@
 =SUBTITLE Represent a Standard I/O device
 
 This provides a similar interface for the special standard input and output
-handles C<$*IN>, C<$*OUT> and C<$*ERR> to that of L<IO::Path|/type/IO/Path>
-for regular files.  It is typically returned by the L<path method|/type/IO/Handle#method_path>
+handles C<$*IN>, C<$*OUT> and C<$*ERR> to that of L<IO::Path|/type/IO::Path>
+for regular files.  It is typically returned by the L<path method|/type/IO::Handle#method_path>
 of those handles so that they can be used interchangeably with the handles of
 regular files.
 
