--- a/Type/Nil.pod
+++ b/Type/Nil.pod
@@ -56,7 +56,7 @@ of the container you assigned it into.
     $x.say;                     #-> (Int)
 
 Because an untyped variable is type C<Any>, assigning a C<Nil> to one
-will result in an L<(Any)> type object.
+will result in an L<(Any)|/type/Any> type object.
 
     my $x = Nil;
     $x.say;          #-> (Any)
