Fixed typo and another broken link

--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -75,7 +75,7 @@ component-wise. Yet another is to obtain the time from an
 L<Instant|/type/Instant>, and only supply the time zone and formatter. Or
 instead of an Instant you can supply an L<Int|/type/Int> as a UNIX timestamp.
 
-You can also supply a C<Str|/type/Str> formatted in ISO 8601 timestamp
+You can also supply a L<Str|/type/Str> formatted in ISO 8601 timestamp
 notation or as a full L<RFC 3339|http://tools.ietf.org/html/rfc3339>
 date and time.  Strings should be formatted as C<yyyy-mm-ddThh:mm::ssZ>
 or C<yyyy-mm-ddThh:mm:ss+0100>.  We are somewhat less restrictive than the
