Fixed some typos in Range.pod

--- a/Type/Range.pod
+++ b/Type/Range.pod
@@ -25,8 +25,8 @@ starting from zero:
     ^$x     # same as 0 ..^ $x.Numeric
 
 Iterating a range (or calling the C<list> method) uses the same semantics as
-the C<++> prefix and postfix operators, i.e. it calls the C<succ> method on
-the start point, and then generated elements).
+the C<++> prefix and postfix operators, i.e., it calls the C<succ> method on
+the start point, and then the generated elements.
 
 Ranges always go from small to larger elements; if the start point is bigger
 than the end point, the range is considered empty.
@@ -42,7 +42,7 @@ increment-by-1.
 
 Use C<Inf> or C<*> (Whatever) to indicate an end point to be open-ended.
 
-    for 1..* { .say }       # start from 1, continue until stopped         
+    for 1..* { .say }       # start from 1, continue until stopped
     for 1..Inf { .say }     # the same
 
 =head1 Methods
@@ -95,10 +95,10 @@ Returns C<True> if both end points are C<Int> values.
 
     method bounds(Range:D:) returns Positional
 
-If the C<Range> is an integer range (as indicated by L<is-int>, then this
+If the C<Range> is an integer range (as indicated by L<is-int>), then this
 method returns a list with the first and last value it will iterate over
 (taking into account L<excludes-min> and L<excludes-max>).  Returns a
-Failure If it is not an integer range. 
+Failure if it is not an integer range.
 
 =head2 method elems
 
