--- a/Type/Any.pod
+++ b/Type/Any.pod
@@ -72,7 +72,7 @@ Usage:
 
     LIST.one
 
-Interprets the invocant as a list and creates an
+Interprets the invocant as a list and creates a
 C<one>-L<Junction|/type/Junction> from it.
 
     say so 1 == (1, 2, 3).one;      # True
@@ -88,7 +88,7 @@ Usage:
 
     LIST.none
 
-Interprets the invocant as a list and creates an
+Interprets the invocant as a list and creates a
 C<none>-L<Junction|/type/Junction> from it.
 
     say so 1 == (1, 2, 3).none;     # False
@@ -103,10 +103,10 @@ Interprets the invocant as a list, and returns that L<List|/type/List>.
 
 =head2 method push
 
-The method push is defined for undefined invocants and allowes to autovivify
-undefined to an empty C<Array>, unless the undefined value implements
-C<Positional> already.  The argument provided will then be pushed into the
-newly created Array.
+The method push is defined for undefined invocants and allowes for
+autovivifying undefined to an empty C<Array>, unless the undefined value
+implements C<Positional> already.  The argument provided will then be pushed
+into the newly created Array.
 
     my %h;
     dd %h<a>; # Any (and therefor undefined)
@@ -155,13 +155,13 @@ Defined as:
     multi method map(HyperIterable:D: &block;; :$label)
 
 C<map> will iterate over the invocant and apply the number of positional
-parameters of the code object from the invocant per call. The returned values
+parameters of the code object from the invocant per call.  The returned values
 of the code object will become elements of the returned C<Seq>.
 
 =head2 method flat
 
-Interprets the invocant as a list, flattens it, and returns that list. Please
-note that C<.flat> will not solve the halting problem for you. If you flat
+Interprets the invocant as a list, flattens it, and returns that list.  Please
+note that C<.flat> will not solve the halting problem for you.  If you flat
 an infinite list C<.flat> may return that infinite list, eating all your RAM
 in the process.
 
@@ -196,7 +196,7 @@ Interprets the invocant as a list, and returns the last index of that list.
 
 Interprets the invocant as a list, and constructs a list of
 L<pairs|/type/Pair> from it, in the same way that assignment to a
-L<Hash|/type/Hash> does. That is, it takes two consecutive elements and
+L<Hash|/type/Hash> does.  That is, it takes two consecutive elements and
 constructs a pair from them, unless the item in the key position already is a
 pair (in which case the pair is passed is passed through, and the next
 list item, if any, is considered to be a key again).
