Mostly minor fixes, a slightly more substantial fix in Bag.pod

--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -23,7 +23,7 @@ Usage:
     pop ARRAY
     ARRAY.pop
 
-Removes and returns the last item from the array. Fails for an empty array.
+Removes and returns the last item from the array.  Fails for an empty array.
 
 Example:
 
@@ -58,7 +58,7 @@ Example:
     @foo.push: 'd';
     say @foo;                   # a b c d
 
-Note that C<push> does not attempt to flatten its argument list. If you pass
+Note that C<push> does not attempt to flatten its argument list.  If you pass
 an array or list as the thing to push, it becomes one additional element:
 
     my @a = <a b c>;
@@ -92,10 +92,10 @@ Usage:
     ARRAY.append(LIST)
     append ARRAY, LIST
 
-Appends the argument list to the array passed as first argument. This modifies
-the array in-place. Returns the modified array.
+Appends the argument list to the array passed as the first argument.  This
+modifies the array in-place.  Returns the modified array.
 
-The difference to method C<push> is that with an array or list argument,
+The difference from method C<push> is that with an array or list argument,
 C<append> appends several elements (one for each array or list element),
 whereas C<push> appends just one element.
 
@@ -119,14 +119,14 @@ Usage:
     shift ARRAY
     ARRAY.shift
 
-Removes and returns the first item from the array. Fails for an empty arrays.
+Removes and returns the first item from the array.  Fails for an empty arrays.
 
 Example:
 
     my @foo = <a b>;
-    say @foo.shift;     # a
-    say @foo.shift;     # b
-    say @foo.shift;     # Element shifted from empty list
+    say @foo.shift;             # a
+    say @foo.shift;             # b
+    say @foo.shift;             # Element shifted from empty list
 
 =head2 routine unshift
 
@@ -191,14 +191,14 @@ Usage:
     ARRAY.splice(START, ELEMS?, REPLACEMENT?)
 
 Deletes C<$elems> elements starting from index C<$start> from the C<Array>,
-returns them and replaces them by C<@replacement>. If C<$elems> is omitted,
+returns them and replaces them by C<@replacement>.  If C<$elems> is omitted,
 all the elements starting from index C<$start> are deleted.
 
 Example:
 
     my @foo = <a b c d e f g>;
-    say @foo.splice(2, 3, <M N O P>);       # c d e
-    say @foo;                               # a b M N O P f g
+    say @foo.splice(2, 3, <M N O P>);        # c d e
+    say @foo;                                # a b M N O P f g
     
 =head2 method shape
 
@@ -215,8 +215,8 @@ Returns the shape of the array as a list.
 Example:
 
     my @foo[2;3] = ( < 1 2 3 >, < 4 5 6 > ); # Array with fixed dimensions
-    say @foo.shape; # (2 3)
-    my @bar = ( < 1 2 3 >, < 4 5 6 > ); # Normal array (of arrays)
-    say @bar.shape; # (*)
+    say @foo.shape;                          # (2 3)
+    my @bar = ( < 1 2 3 >, < 4 5 6 > );      # Normal array (of arrays)
+    say @bar.shape;                          # (*)
 
 =end pod
