--- a/Type/Bag.pod
+++ b/Type/Bag.pod
@@ -8,15 +8,15 @@
 
 A C<Bag> is an immutable bag/multiset, meaning a collection of distinct elements
 in no particular order that each have an integer weight assigned to them
-signifying how many copies of that element are considered "in the bag". (For
+signifying how many copies of that element are considered "in the bag".  (For
 I<mutable> bags, see L<BagHash> instead.)
 
 C<Bag>s are often used for performing weighted random selections - see
 L<.pick|method pick> and L<.roll|method roll>.
 
-Objects/values of any type are allowed as bag elements. Within a C<Bag>, items
+Objects/values of any type are allowed as bag elements.  Within a C<Bag>, items
 that would compare positively with the L<===> operator are considered the same
-element, with the number of how many there were as its weight. But of course
+element, with the number of how many there are as its weight.  But of course
 you can also easily get back the expanded list of items (without the order):
 
 =begin code
@@ -30,8 +30,9 @@ say $breakfast.kxxv.sort;  # bacon eggs spam spam spam spam
 =end code
 
 C<Bag>s can be treated as object hashes using the C<{ }> postcircumfix operator,
-which returns the corresponding integer weight for keys that are elements of the
-bag, and C<0> for keys that aren't:
+or the C< < > > operator for literal string keys, which returns the
+corresponding integer weight for keys that are elements of the bag, and C<0> for
+keys that aren't:
 
     say $breakfast<bacon>;    # 1
     say $breakfast<spam>;     # 4
@@ -40,7 +41,7 @@ bag, and C<0> for keys that aren't:
 =head1 Creating C<Bag> objects
 
 C<Bag>s can be composed using the L<bag|#sub bag> subroutine (or C<Bag.new>, for
-which it is a shorthand). Any positional parameters, regardless of their type,
+which it is a shorthand).  Any positional parameters, regardless of their type,
 become elements of the bag:
 
     my $n = bag "a" => 0, "b" => 1, "c" => 2, "c" => 2;
@@ -49,8 +50,8 @@ become elements of the bag:
     say $n.values.perl;      # (1, 1, 1, 1).list
 
 Alternatively, the C<.Bag> coercer (or its functional form, C<Bag()>) can be
-called on an existing object to coerce it to a C<Bag>. Its semantics depend on
-the type and contents of the object. In general it evaluates the object in list
+called on an existing object to coerce it to a C<Bag>.  Its semantics depend on
+the type and contents of the object.  In general it evaluates the object in list
 context and creates a bag with the resulting items as elements, although for
 Hash-like objects or Pair items, only the keys become elements of the bag, and
 the (cumulative) values become the associated integer weights:
@@ -62,7 +63,7 @@ the (cumulative) values become the associated integer weights:
 
 Furthermore, you can get a C<Bag> by using bag operators (see next section) on
 objects of other types such as L<List>, which will internally call C<.Bag>
-on them before performing the operation. Be aware of the tight precedence of
+on them before performing the operation.  Be aware of the tight precedence of
 those operators though, which may require you to use parens around arguments:
 
     say (1..5) (+) 4;  # bag(1, 2, 3, 4(2), 5)
@@ -71,7 +72,7 @@ those operators though, which may require you to use parens around arguments:
 
 Perl 6 provides common set and bag operators, which can take C<Bag>s (or any
 other collections) as input, and return result as C<Bool>, C<Set> or C<Bag>
-values. For example:
+values.  For example:
 
 =begin code
 my ($a, $b) = bag(2, 2, 4), bag(2, 3, 3, 4);
