.polymod is a method, not a routine

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -65,7 +65,7 @@ Returns the given C<Int> raised to the C<$y> power within modulus C<$mod>.
     say expmod(4, 2, 5);    # 1
     say 7.expmod(2, 5);     # 4
 
-=head2 routine polymod
+=head2 method polymod
 
 Defined as:
 
