Improve description of .polymod

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -69,27 +69,39 @@ Returns the given C<Int> raised to the C<$y> power within modulus C<$mod>.
 
 Defined as:
 
-    method polymod(Int:D: +@mods)      
+    method polymod(Int:D: +@mods)
 
 Usage:
 
-    INTEGER.polymod(LIST)            
+    INTEGER.polymod(LIST)
 
-Returns a sequence of mod results corresponding to the divisors in C<@mods>.       
-If the number of divisors is finite, returns one more result than the number 
-of divisors, and the final result is the remainder after all the divisions. 
-If the number of divisors is infinite, runs until the remainder is 0. 
-The Int version of this method assumes all the divisors are also integers. 
-Coerce the invocant to Num or Rat if you wish to use fractional operations.
+Returns a sequence of mod results corresponding to the divisors in C<@mods>.
+The divisors are given from smallest "unit" to the largest
+(e.g. 60 seconds per minute, 60 minutes per hour) and the results
+are returned in the same way: from smallest to the largest
+(5 seconds, 4 minutes).
 
-    say 3661.polymod(60,60,24);                                                  # (1 1 1 0)
+If the divisors are given as a lazy list, runs until the remainder is 0.
+Otherwise, returns one more items in the result than the number of given
+divisors. All divisors must be Ints, unless the method is called on a non-Int number.
 
-    my $seconds = 3600;
-    say $seconds.polymod(60,60,24) Z <seconds minutes hours days>;               # ((0 seconds) (0 minutes) (1 hours) (0 days))
-    
-    # another way to do calculations like the ones above without using polymod
-    my $secs = 3661; 
-    for 60,60,24 { say $secs mod $_; $secs div= $_ }; say $secs;                 # 1\n1\n1\n0\n
+    my $seconds = 1 * 60*60*24 # days
+                + 3 * 60*60    # hours
+                + 4 * 60       # minutes
+                + 5;           # seconds
+
+    say $seconds.polymod(60, 60);              # (5 4 27)
+    say $seconds.polymod(60, 60, 24);          # (5 4 3 1)
+
+    say 120.polymod:      10¹, 10², 10³, 10⁴;  # (0 12 0 0 0)
+    say 120.polymod: lazy 10¹, 10², 10³, 10⁴;  # (0 12)
+    say 120.polymod:      10¹, 10² … ∞;        # (0 12)
+
+    say ⅔.polymod(⅓);                          # (0 2)
+    say 5.Rat.polymod(.3, .2);                 # (0.2 0 80)
+
+For a more detailed discussion, see
+L<this blog post|http://perl6.party/post/Perl6-.polymod-break-up-a-number-into-denominations>
 
 =head2 routine is-prime
 
