Fixed a couple of broken links

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -215,7 +215,7 @@ Note that C<map> does not flatten embedded lists and arrays, so
 
 passes C<(1, 2)> and C<< <a b> >> in turn to the block, leading to a total
 of two iterations and the result sequence C<"1,2", "a,b">.
-See L<method flatmap|/type/List/#method_flatmap> for an alternative that flattens.
+See L<method flatmap|/type/List#method_flatmap> for an alternative that flattens.
 
 =head2 sub flat
 
@@ -247,7 +247,7 @@ Unlike C<map> it flattens non-itemized lists and arrays, so
 
     say ((1, 2), <a b>).flatmap(&uc).join('|');     # 1|2|A|B
 
-invokes C<uc|/type/Str#routine uc> four times.
+invokes L<uc|/type/Str#routine_uc> four times.
 
 =head2 routine grep
 
