Fix incorrect sequence operator progression

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -93,9 +93,9 @@ divisors. All divisors must be Ints, unless the method is called on a non-Int nu
     say $seconds.polymod(60, 60);              # (5 4 27)
     say $seconds.polymod(60, 60, 24);          # (5 4 3 1)
 
-    say 120.polymod:      10¹, 10², 10³, 10⁴;  # (0 12 0 0 0)
-    say 120.polymod: lazy 10¹, 10², 10³, 10⁴;  # (0 12)
-    say 120.polymod:      10¹, 10² … ∞;        # (0 12)
+    say 120.polymod:      1, 10, 10², 10³, 10⁴;  # (0 0 12 0 0 0)
+    say 120.polymod: lazy 1, 10, 10², 10³, 10⁴;  # (0 0 12)
+    say 120.polymod:      1, 10, 10² … ∞;        # (0 0 12)
 
     say ⅔.polymod(⅓);                          # (0 2)
     say 5.Rat.polymod(.3, .2);                 # (0.2 0 80)
