Add implementation example for polymod

--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -100,6 +100,23 @@ divisors. All divisors must be Ints, unless the method is called on a non-Int nu
     say ⅔.polymod(⅓);                          # (0 2)
     say 5.Rat.polymod(.3, .2);                 # (0.2 0 80)
 
+To illustrate how the Int, non-lazy version of polymod works, consider
+this code that implements it:
+
+    my $seconds = 2 * 60*60*24 # days
+                + 3 * 60*60    # hours
+                + 4 * 60       # minutes
+                + 5;           # seconds
+    
+    my @pieces;
+    for 60, 60, 24 -> $divisor {
+        @pieces.push: $seconds mod $divisor;
+        $seconds div= $divisor
+    }
+    @pieces.push: $seconds;
+    
+    say @pieces; # [5 4 3 2]
+
 For a more detailed discussion, see
 L<this blog post|http://perl6.party/post/Perl6-.polymod-break-up-a-number-into-denominations>
 
