Added docs for methods 'parent' and 'child' in IO::Path. ZoffixW++

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -141,6 +141,25 @@ Returns a new C<IO::Path> object that is an absolute path, based on C<$base>.
 
 Returns a new C<IO::Path> object relative to the C<$base> path.
 
+=head2 method parent
+
+    method parent(IO::Path:D: --> IO::Path)
+
+Removes the last portion of the path and returns the result as a new C<IO::Path>.
+
+    my $io = IO::Path.new( "/etc/passwd" );
+    say $io.parent;                          # "/etc".IO
+
+=head2 method child
+
+    method child(IO::Path:D: $childname --> IO::Path)
+
+Appends C<$childname> to the end of the path, adding path separators where
+needed and returns the result as a new C<IO::Path>.
+
+    my $io = IO::Path.new( "/bin" );
+    say $io.child('netstat');                # "/bin/netstat".IO
+
 =head2 routine dir
 
     sub    dir(Cool $path = '.', Mu :$test = none('.', '..'))
