--- a/Type/Int.pod
+++ b/Type/Int.pod
@@ -82,8 +82,8 @@ are returned in the same way: from smallest to the largest
 (5 seconds, 4 minutes).
 
 If the divisors are given as a lazy list, runs until the remainder is 0.
-Otherwise, returns one more items in the result than the number of given
-divisors. All divisors must be Ints, unless the method is called on a non-Int number.
+Otherwise, returns one more item in the result than the number of given
+divisors. All divisors must be C<Int>s, unless the method is called on a non-C<Int> number.
 
     my $seconds = 1 * 60*60*24 # days
                 + 3 * 60*60    # hours
@@ -100,7 +100,7 @@ divisors. All divisors must be Ints, unless the method is called on a non-Int nu
     say ⅔.polymod(⅓);                          # (0 2)
     say 5.Rat.polymod(.3, .2);                 # (0.2 0 80)
 
-To illustrate how the Int, non-lazy version of polymod works, consider
+To illustrate how the C<Int>, non-lazy version of polymod works, consider
 this code that implements it:
 
     my $seconds = 2 * 60*60*24 # days
