Added doc for methods 'IO' and 'SPEC' in IO::Path. moritz++

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -367,6 +367,23 @@ deleted. The method form returns C<True> on success, or
 L<fails|/routine/fail> with L<X::IO::Unlink> if the operation could not be
 completed.
 
+=head2 method IO
+
+    method IO(IO::Path:D: --> IO::Path)
+
+Returns the invocant.
+
+=head2 method SPEC
+
+    method SPEC(IO::Path:D: --> IO::Spec)
+
+Returns the L<IO::Spec|/type/IO::Spec> object that was (implicitly) specified at object
+creation time. 
+    
+    my $io = IO::Path.new("/bin/bash");
+    say $io.SPEC;                            # (Unix)    
+    say $IO.SPEC.dir-sep;                    # /
+
 =head1 File Test operators
 
 X<-e> X<-f>
