Fixed typo and changed the documentation for the 'path' method

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -92,9 +92,9 @@ values the return values of the methods with the same names.
 
 =head2 method path
 
-    method path(IO::Path:D:)
+    method path(IO::Path:D: --> Str)
 
-Returns the invocant.
+Returns the full path as a string.
 
 =head2 method Str
 
@@ -382,7 +382,7 @@ creation time.
     
     my $io = IO::Path.new("/bin/bash");
     say $io.SPEC;                            # (Unix)    
-    say $IO.SPEC.dir-sep;                    # /
+    say $io.SPEC.dir-sep;                    # /
 
 =head1 File Test operators
 
