Added docs for the method 'resolve' in IO::Path

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -160,6 +160,18 @@ needed and returns the result as a new C<IO::Path>.
     my $io = IO::Path.new( "/bin" );
     say $io.child('netstat');                # "/bin/netstat".IO
 
+=head2 method resolve
+
+    method resolve(IO::Path:D: --> IO::Path)
+
+Returns a new C<IO::Path> object with all symbolic links and references to the
+parent directory (C<..>) physically resolved.  This means that the
+filesystem is examined for each directory in the path, and any symlinks found
+are followed.
+
+    # bar is a symlink pointing to "/baz"
+    my $io = "foo/./bar/..".IO.resolve;      # now "/" (the parent of "/baz")
+
 =head2 routine dir
 
     sub    dir(Cool $path = '.', Mu :$test = none('.', '..'))
