Added method header to abspath and implemented a textual change suggested by [Coke]++

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -43,6 +43,8 @@ basename passed as named arguments.
 
 =head2 method abspath
 
+    method abspath(IO::Path:D: --> Str)
+
 Returns the absolute path as a string.
 
 =head2 method basename
@@ -165,9 +167,8 @@ needed and returns the result as a new C<IO::Path>.
     method resolve(IO::Path:D: --> IO::Path)
 
 Returns a new C<IO::Path> object with all symbolic links and references to the
-parent directory (C<..>) physically resolved.  This means that the
-filesystem is examined for each directory in the path, and any symlinks found
-are followed.
+parent directory (C<..>) resolved.  This means that the filesystem is examined 
+for each directory in the path, and any symlinks found are followed.
 
     # bar is a symlink pointing to "/baz"
     my $io = "foo/./bar/..".IO.resolve;      # now "/" (the parent of "/baz")
