Added a note about 'resolve' currently not working correctly on all platforms. ugexe++

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -173,6 +173,9 @@ for each directory in the path, and any symlinks found are followed.
     # bar is a symlink pointing to "/baz"
     my $io = "foo/./bar/..".IO.resolve;      # now "/" (the parent of "/baz")
 
+NOTE: Currently (May 2016) this method doesn't work correctly on all platforms,
+e.g. Windows, since it assumes POSIX semantics.   
+
 =head2 routine dir
 
     sub    dir(Cool $path = '.', Mu :$test = none('.', '..'))
